# CMake-test

./: README.md  run.sh
src/: CMakeLists.txt  a.cpp  main.cpp
src/module1/: func1.cpp
src/module1/subdir/: sub.cpp  sub.h
